# iCalendar-parser_PA193_Rteam

./: .gitignore  .project  README.md  configure.ac
documents/: .gitignore  codereviewZeroTierOne.tex  p_team_code_review.tex  p_team_code_review_report.tex  presentation.tex  report.tex  report_2b.tex
documents/malformed_inputs/: example.json  newline_name.json  null_string.json  reading_out_bounds.json  utf8_overlong.json  valid_rejected.json
src/: Makefile.am  ical-parser.pro  main.cpp  parser.cpp  parser.h  parserexception.h  parsertemplate.h  streampos.h
src/components/: timezonerules.cpp  timezonerules.h  valarm.cpp  valarm.h  vcalendar.cpp  vcalendar.h  vevent.cpp  vevent.h  vfreebusy.cpp  vfreebusy.h  vjournal.cpp  vjournal.h  vtimezone.cpp  vtimezone.h  vtodo.cpp  vtodo.h
src/core/: charset.h  genericcomponent.h  genericparser.cpp  genericparser.h  genericparsertemplate.cpp  genericparsertemplate.h  genericproperty.h  genericpropertyparameter.h  stream.h  uniqueidregistry.h  utf8validator.cpp  utf8validator.h  valueparser.cpp  valueparser.h  withpos.h
src/data/: date.cpp  date.h  datetime.cpp  datetime.h  duration.cpp  duration.h  period.cpp  period.h  recurrencerule.cpp  recurrencerule.h  time.cpp  time.h  utcoffset.cpp  utcoffset.h
src/parameters/: altrep.cpp  altrep.h  calusertype.cpp  calusertype.h  commonname.cpp  commonname.h  delegatedfrom.cpp  delegatedfrom.h  delegatedto.cpp  delegatedto.h  direntryref.cpp  direntryref.h  encoding.cpp  encoding.h  fbtype.cpp  fbtype.h  fmttype.cpp  fmttype.h  language.cpp  language.h  member.cpp  member.h  partstat.cpp  partstat.h  range.cpp  range.h  related.cpp  related.h  reltype.cpp  reltype.h  role.cpp  role.h  rsvp.cpp  rsvp.h  sentby.cpp  sentby.h  tzid_param.cpp  tzid_param.h  value.cpp  value.h
src/properties/: action.cpp  action.h  attach.cpp  attach.h  attendee.cpp  attendee.h  calscale.cpp  calscale.h  categories.cpp  categories.h  class.cpp  class.h  comment.cpp  comment.h  completed.cpp  completed.h  contact.cpp  contact.h  created.cpp  created.h  description.cpp  description.h  dtend.cpp  dtend.h  dtstamp.cpp  dtstamp.h  dtstart.cpp  dtstart.h  due.cpp  due.h  durationprop.cpp  durationprop.h  exdate.cpp  exdate.h  freebusy.cpp  freebusy.h  geo.cpp  geo.h  ianaprop.cpp  ianaprop.h  (+56 more)
src/tests/: alltests.cpp  alltests.h  dataparserutils.h  dateparsertests.cpp  dateparsertests.h  durationparsertests.cpp  durationparsertests.h  testreporter.h  utf8validatortests.cpp  utf8validatortests.h  varioustests.cpp  varioustests.h
