ACLOCAL_AMFLAGS = -I m4

AM_CXXFLAGS = -I$(srcdir)/src

bin_PROGRAMS = ical-parser

ical_parser_SOURCES = \
    main.cpp \
    parser.cpp \
    core/genericparser.cpp \
    core/genericparsertemplate.cpp \
    core/utf8validator.cpp \
    core/valueparser.cpp \
    data/date.cpp \
    data/datetime.cpp \
    data/duration.cpp \
    data/period.cpp \
    data/recurrencerule.cpp \
    data/time.cpp \
    data/utcoffset.cpp \
    parameters/altrep.cpp \
    parameters/calusertype.cpp \
    parameters/commonname.cpp \
    parameters/delegatedfrom.cpp \
    parameters/delegatedto.cpp \
    parameters/direntryref.cpp \
    parameters/encoding.cpp \
    parameters/fbtype.cpp \
    parameters/fmttype.cpp \
    parameters/language.cpp \
    parameters/member.cpp \
    parameters/partstat.cpp \
    parameters/range.cpp \
    parameters/related.cpp \
    parameters/reltype.cpp \
    parameters/role.cpp \
    parameters/rsvp.cpp \
    parameters/sentby.cpp \
    parameters/tzid_param.cpp \
    parameters/value.cpp \
    properties/action.cpp \
    properties/attach.cpp \
    properties/attendee.cpp \
    properties/calscale.cpp \
    properties/categories.cpp \
    properties/class.cpp \
    properties/comment.cpp \
    properties/completed.cpp \
    properties/contact.cpp \
    properties/created.cpp \
    properties/description.cpp \
    properties/dtend.cpp \
    properties/dtstamp.cpp \
    properties/dtstart.cpp \
    properties/due.cpp \
    properties/durationprop.cpp \
    properties/exdate.cpp \
    properties/freebusy.cpp \
    properties/geo.cpp \
    properties/lastmodified.cpp \
    properties/location.cpp \
    properties/method.cpp \
    properties/organizer.cpp \
    properties/percentcomplete.cpp \
    properties/priority.cpp \
    properties/prodid.cpp \
    properties/rdate.cpp \
    properties/recurrenceid.cpp \
    properties/relatedto.cpp \
    properties/repeat.cpp \
    properties/requeststatus.cpp \
    properties/resources.cpp \
    properties/rrule.cpp \
    properties/sequence.cpp \
    properties/status.cpp \
    properties/summary.cpp \
    properties/transp.cpp \
    properties/trigger.cpp \
    properties/tzid.cpp \
    properties/tzname.cpp \
    properties/tzoffsetfrom.cpp \
    properties/tzoffsetto.cpp \
    properties/tzurl.cpp \
    properties/uid.cpp \
    properties/url.cpp \
    properties/version.cpp \
    components/timezonerules.cpp \
    components/valarm.cpp \
    components/vcalendar.cpp \
    components/vevent.cpp \
    components/vfreebusy.cpp \
    components/vjournal.cpp \
    components/vtimezone.cpp \
    components/vtodo.cpp \
    tests/alltests.cpp \
    tests/dateparsertests.cpp \
    tests/durationparsertests.cpp \
    tests/utf8validatortests.cpp \
    tests/varioustests.cpp
